# ucdeconvolve

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  conf.py  index.rst  installation.md  method.md  registration.md  requirements.txt  tutorials.rst
docs/api/: index.rst
docs/api/api/: index.rst
docs/api/plotting/: index.rst
docs/api/tools/: index.rst
docs/api/utilities/: index.rst
docs/notebooks/: bulk_example.ipynb  getting_started.ipynb  registration.ipynb  single_cell_example.ipynb  spatial_example.ipynb
docs/notebooks/cache/ucdeconvolve/: enge2017-human-pancreas.h5ad  lee-human-pbmc-covid.h5ad
docs/release-notes/: 0.0.1.md  0.1.0.md  index.md
docs/source/: conf.py  index.rst
ucdeconvolve/: ._io.py.swp  __init__.py  _data.py  _exceptions.py  _io.py  _metadata.py  _postprocessing.py  _propagator.py  _settings.py  _tools.py  _utils.py
ucdeconvolve/_api/: __init__.py  _api.py  _apiutils.py  _statewatchers.py
ucdeconvolve/_compat/: __init__.py  _tools.py
ucdeconvolve/_plotting/: __init__.py  _base_plotting.py  _colormaps.py  _common_plotting.py  _explain_plotting.py  _plotting.py  _plotutils.py
ucdeconvolve/_tools/: __init__.py  _base.py  _explain.py  _select.py  _tools.py
ucdeconvolve/_utilities/: __init__.py  _utilities_common.py
ucdeconvolve/data/: metadata.pkl
ucdeconvolve/plotting/: __init__.py  _plotting.py
ucdeconvolve/tests/: test_utils.py
ucdeconvolve/tools/: _tools.py
