[build-system]
requires = ["setuptools>=59.5"]
build-backend = "setuptools.build_meta"
requires = ["anndata>=0.7.8", "scanpy>=1.8.2","pandas>=1.3.5","numpy>=1.21.6","progressbar2>=4.0.0","numba>=0.55.2","scikit-learn>=1.0.2"]

[project]
name = "ucdeconvolve"
version = "0.0.1"
authors = [
  { name="Daniel Charytonowicz", email="daniel.charytonowicz@icahn.mssm.edu" },
]
description = "Cell Type Deconvolution For Transcriptomic Data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dchary/ucdeconvolve"
"Bug Tracker" = "https://github.com/dchary/ucdeconvolve/issues"
